--- a/src/index.css
+++ b/src/index.css
@@ -18,5 +18,5 @@
 
 body {
 	font-family: 'Ubuntu', sans-serif;
-	background-color: hsl(217, 100%, 97%);
+	background-color: var(--color-magnolia);
 }
